--- a/plantaneuse/composer.json
+++ b/plantaneuse/composer.json
@@ -13,6 +13,8 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
+
+
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
@@ -21,8 +23,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest": "^3.7"
     },
     "autoload": {
         "psr-4": {
